fix responsiveness issues on small screens

--- a/internal/web/assets/styles.scss
+++ b/internal/web/assets/styles.scss
@@ -39,11 +39,13 @@ h1 {
   line-height: 1.1;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@screen sm {
+  #app {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+  }
 }
 
 #htmx-result {
